--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,2 +1,11 @@
 //Font-sizes
 $really-small : 8px;
+
+//Social media colors for icons
+$facebook : #3b5998;
+$twitter  : #1dcaff;
+$instagram : #bc2a8d;
+$pinterest : #cb2027;
+
+//Navbar color
+$navbar-color : 10230f;
