--- a/css/smallscreen/smallscreen.scss
+++ b/css/smallscreen/smallscreen.scss
@@ -2,13 +2,32 @@
 @import "../variables.scss";
 @import "../general-mixins";
 
+@font-face {
+  font-family: 'Greek';
+  src: url(../fonts/GFSSolomos.otf);
+}
+
+//Body layout
+@mixin body-small{
+  color: white;
+  background: url("../../images/home-page/sheeps-hi-res-small-screens-compressor.jpg")no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+}
+
+//Restores font to normal size
+@mixin normal-font{
+  font-size: medium;
+}
+
 html{
-  height:100%;
-  min-height:100%;
+ @include html-full;
 }
 
 body{
   @include body-small;
+  @include body-zero;
 }
 
 footer{
@@ -22,9 +41,6 @@ footer{
 ul {
   padding: 0;
   list-style: none;
-  li {
-    display: inline-block;
-  }
 }
 
 .footer-rights{
@@ -53,3 +69,26 @@ a{
   width: 70%;
   @include img-center;
 }
+
+
+
+.quote {
+  font-family:'Greek';
+  margin: 10px 0;
+}
+
+.badge{
+  &.facebook{
+    @include social-icons($facebook);
+  }
+  &.twitter{
+    @include social-icons($twitter);
+  }
+  &.pinterest{
+    @include social-icons($pinterest);
+  }
+  &.instagram{
+    @include instagram-pallete;
+  }
+}
+
