--- a/css/general-mixins.scss
+++ b/css/general-mixins.scss
@@ -1,14 +1,29 @@
 //html 100%
-@mixin html-full{
+html{
   height:100%;
   min-height:100%;
 }
 
+.test-border{
+  border: 1px solid black;
+}
+
 //Body zero
-@mixin body-zero {
+body{
   margin: 0;
   padding: 0;
+  color: white;
+  background: url("../images/home-page/sheeps-hi-res-compressor.jpg")no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+
 }
+
+a{
+  color: white;
+}
+
 //Image center trick
 @mixin img-center{
   display:block;
@@ -25,11 +40,67 @@
     display: inline-block;
   }
 }
+@media (max-width: 1200px) {
+  .navbar-header {
+    float: none;
+  }
+  .navbar-left,.navbar-right {
+    float: none !important;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+    display: none!important;
+  }
+  .navbar-nav {
+    float: none!important;
+    margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+    float: none;
+  }
+  .navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .collapse.in{
+    display:block !important;
+  }
+}
+
+
+
 //Special palette for instagram icon
 @mixin instagram-pallete{
   background: linear-gradient( #400080, transparent), linear-gradient(200deg, #d047d1, #ff0000,    #ffff00);
 
 }
+.badge{
+  &.facebook{
+    @include social-icons($facebook);
+  }
+  &.twitter{
+    @include social-icons($twitter);
+  }
+  &.pinterest{
+    @include social-icons($pinterest);
+  }
+  &.instagram{
+    @include instagram-pallete;
+  }
+}
+
+
+
 
 .navbar-default{
   background-color:#10230f ;
@@ -50,5 +121,27 @@
 
 .display-inline{
   display: inline-block;
+}
+
+.bottom-row{
+  .navbar {
+    margin-bottom: 0;
+  }
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+}
+
+.hours-table{
+
+  padding: 15px;
+  text-align: center;
+}
+
+th,td{
+  padding: 2px;
+  text-align: center;
 }
 
