--- a/css/customStylesheet.css
+++ b/css/customStylesheet.css
@@ -14,6 +14,16 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover; }
 
+@font-face {
+  font-family: 'Greek';
+  src: url(fonts/GFSSolomos.otf); }
+.quote {
+  font-family: 'Greek';
+  margin: 10px 0; }
+
+ul {
+  padding: 0; }
+
 a {
   color: white; }
 
@@ -96,12 +106,6 @@ th, td {
   padding: 2px;
   text-align: center; }
 
-@font-face {
-  font-family: 'Greek';
-  src: url(fonts/GFSSolomos.otf); }
-ul {
-  padding: 0; }
-
 html {
   height: 100%;
   min-height: 100%; }
@@ -117,6 +121,16 @@ body {
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover; }
+
+@font-face {
+  font-family: 'Greek';
+  src: url(fonts/GFSSolomos.otf); }
+.quote {
+  font-family: 'Greek';
+  margin: 10px 0; }
+
+ul {
+  padding: 0; }
 
 a {
   color: white; }
@@ -224,14 +238,7 @@ th, td {
 
   .footer-rights {
     font-size: 6px;
-    opacity: 0.6; }
-
-  #hours {
-    display: none; } }
-.quote {
-  font-family: 'Greek';
-  margin: 10px 0; }
-
+    opacity: 0.6; } }
 html {
   height: 100%;
   min-height: 100%; }
@@ -247,6 +254,16 @@ body {
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover; }
+
+@font-face {
+  font-family: 'Greek';
+  src: url(fonts/GFSSolomos.otf); }
+.quote {
+  font-family: 'Greek';
+  margin: 10px 0; }
+
+ul {
+  padding: 0; }
 
 a {
   color: white; }
@@ -330,7 +347,7 @@ th, td {
   padding: 2px;
   text-align: center; }
 
-@media only screen and (min-width: 481px) and (max-width: 768px) {
+@media only screen and (min-width: 481px) and (max-width: 767px) {
   .img-logo {
     width: 130px;
     display: block;
@@ -347,5 +364,276 @@ th, td {
   .footer-rights {
     font-size: 6px;
     opacity: 0.6; } }
+html {
+  height: 100%;
+  min-height: 100%; }
+
+.test-border {
+  border: 1px solid black; }
+
+body {
+  margin: 0;
+  padding: 0;
+  color: white;
+  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover; }
+
+@font-face {
+  font-family: 'Greek';
+  src: url(fonts/GFSSolomos.otf); }
+.quote {
+  font-family: 'Greek';
+  margin: 10px 0; }
+
+ul {
+  padding: 0; }
+
+a {
+  color: white; }
+
+.social-icons li {
+  display: inline-block; }
+
+@media (max-width: 1200px) {
+  .navbar-header {
+    float: none; }
+
+  .navbar-left, .navbar-right {
+    float: none !important; }
+
+  .navbar-toggle {
+    display: block; }
+
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
+
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px; }
+
+  .navbar-collapse.collapse {
+    display: none !important; }
+
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7.5px; }
+
+  .navbar-nav > li {
+    float: none; }
+
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+
+  .collapse.in {
+    display: block !important; } }
+.badge.facebook {
+  background-color: #3b5998; }
+.badge.twitter {
+  background-color: #1dcaff; }
+.badge.pinterest {
+  background-color: #cb2027; }
+.badge.instagram {
+  background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
+.navbar-default {
+  background-color: #10230f; }
+  .navbar-default .navbar-brand {
+    color: white; }
+
+.navbar-default.navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: white; }
+
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  font-size: large; }
+
+.display-inline {
+  display: inline-block; }
+
+.bottom-row {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0; }
+  .bottom-row .navbar {
+    margin-bottom: 0; }
+
+.hours-table {
+  padding: 15px;
+  text-align: center; }
+
+th, td {
+  padding: 2px;
+  text-align: center; }
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .img-logo {
+    width: 340px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto; }
+
+  .quote {
+    font-size: 53px; }
+
+  .footer-rights {
+    font-size: 10px;
+    opacity: 0.6; }
+
+  .fa-size {
+    font-size: 24px !important; }
+
+  .social-icons {
+    margin-top: 20px;
+    text-align: center; }
+    .social-icons li {
+      margin-right: 10px; }
+
+  .phone, .hours-table {
+    font-size: 25px; }
+
+  .phone {
+    display: inline-block; } }
+html {
+  height: 100%;
+  min-height: 100%; }
+
+.test-border {
+  border: 1px solid black; }
+
+body {
+  margin: 0;
+  padding: 0;
+  color: white;
+  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover; }
+
+@font-face {
+  font-family: 'Greek';
+  src: url(fonts/GFSSolomos.otf); }
+.quote {
+  font-family: 'Greek';
+  margin: 10px 0; }
+
+ul {
+  padding: 0; }
+
+a {
+  color: white; }
+
+.social-icons li {
+  display: inline-block; }
+
+@media (max-width: 1200px) {
+  .navbar-header {
+    float: none; }
+
+  .navbar-left, .navbar-right {
+    float: none !important; }
+
+  .navbar-toggle {
+    display: block; }
+
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
+
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px; }
+
+  .navbar-collapse.collapse {
+    display: none !important; }
+
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7.5px; }
+
+  .navbar-nav > li {
+    float: none; }
+
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+
+  .collapse.in {
+    display: block !important; } }
+.badge.facebook {
+  background-color: #3b5998; }
+.badge.twitter {
+  background-color: #1dcaff; }
+.badge.pinterest {
+  background-color: #cb2027; }
+.badge.instagram {
+  background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
+.navbar-default {
+  background-color: #10230f; }
+  .navbar-default .navbar-brand {
+    color: white; }
+
+.navbar-default.navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: white; }
+
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  font-size: large; }
+
+.display-inline {
+  display: inline-block; }
+
+.bottom-row {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0; }
+  .bottom-row .navbar {
+    margin-bottom: 0; }
+
+.hours-table {
+  padding: 15px;
+  text-align: center; }
+
+th, td {
+  padding: 2px;
+  text-align: center; }
+
+@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+  .img-logo {
+    width: 340px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto; }
+
+  .quote {
+    font-size: 53px; }
+
+  .footer-rights {
+    font-size: 12px;
+    opacity: 0.6; }
+
+  .fa-size {
+    font-size: 24px !important; }
+
+  .social-icons {
+    margin: 20px 0 0 50px; }
+    .social-icons li {
+      margin-right: 10px; }
+
+  .phone, .hours-table {
+    font-size: 25px; }
+
+  .phone {
+    display: inline-block; } }
 
 /*# sourceMappingURL=customStylesheet.css.map */
