--- a/css/small-medium-screen/small-medium-screen.scss
+++ b/css/small-medium-screen/small-medium-screen.scss
@@ -11,7 +11,6 @@
 
   .social-icons{
     padding-top: 5px;
-    margin-left: 25px;
   }
 
   #hours{
@@ -21,6 +20,10 @@
   .footer-rights{
     font-size:6px;
     opacity: 0.6;
+  }
+
+  .footer-big-screens{
+    display: none;
   }
 
 }
