--- a/css/customStylesheet.css
+++ b/css/customStylesheet.css
@@ -30,7 +30,7 @@ a {
 .social-icons li {
   display: inline-block; }
 
-@media (max-width: 1200px) {
+@media (max-width: 1024px) {
   .navbar-header {
     float: none; }
 
@@ -138,7 +138,7 @@ a {
 .social-icons li {
   display: inline-block; }
 
-@media (max-width: 1200px) {
+@media (max-width: 1024px) {
   .navbar-header {
     float: none; }
 
@@ -216,10 +216,13 @@ th, td {
 
 @media only screen and (max-width: 480px) {
   footer {
-    font-size: 8px;
-    padding-top: 10px; }
-    footer li:not(:first-child) {
-      margin-left: 5px; }
+    font-size: 8px; }
+
+  .hours {
+    margin-top: 12px; }
+
+  .quote {
+    font-size: 30px; }
 
   .footer-rights {
     margin-bottom: 5px; }
@@ -228,17 +231,20 @@ th, td {
     font-size: medium; }
 
   .header {
-    padding-top: 20px; }
+    padding: 20px 20px 0 0; }
 
   .img-logo {
-    width: 200px;
+    width: 180px;
     display: block;
     margin-right: auto;
     margin-left: auto; }
 
   .footer-rights {
     font-size: 6px;
-    opacity: 0.6; } }
+    opacity: 0.6; }
+
+  .footer-big-screens {
+    display: none; } }
 html {
   height: 100%;
   min-height: 100%; }
@@ -271,7 +277,7 @@ a {
 .social-icons li {
   display: inline-block; }
 
-@media (max-width: 1200px) {
+@media (max-width: 1024px) {
   .navbar-header {
     float: none; }
 
@@ -355,15 +361,17 @@ th, td {
     margin-left: auto; }
 
   .social-icons {
-    padding-top: 5px;
-    margin-left: 25px; }
+    padding-top: 5px; }
 
   #hours {
     display: none; }
 
   .footer-rights {
     font-size: 6px;
-    opacity: 0.6; } }
+    opacity: 0.6; }
+
+  .footer-big-screens {
+    display: none; } }
 html {
   height: 100%;
   min-height: 100%; }
@@ -396,7 +404,7 @@ a {
 .social-icons li {
   display: inline-block; }
 
-@media (max-width: 1200px) {
+@media (max-width: 1024px) {
   .navbar-header {
     float: none; }
 
@@ -480,7 +488,7 @@ th, td {
     margin-left: auto; }
 
   .quote {
-    font-size: 53px; }
+    font-size: 58px; }
 
   .footer-rights {
     font-size: 10px;
@@ -490,16 +498,18 @@ th, td {
     font-size: 24px !important; }
 
   .social-icons {
-    margin-top: 20px;
-    text-align: center; }
+    margin-top: 20px; }
     .social-icons li {
       margin-right: 10px; }
+
+  .header {
+    padding: 20px 20px 0 0; }
 
   .phone, .hours-table {
     font-size: 25px; }
 
-  .phone {
-    display: inline-block; } }
+  .footer-big-screens {
+    display: none; } }
 html {
   height: 100%;
   min-height: 100%; }
@@ -532,7 +542,7 @@ a {
 .social-icons li {
   display: inline-block; }
 
-@media (max-width: 1200px) {
+@media (max-width: 1024px) {
   .navbar-header {
     float: none; }
 
@@ -608,15 +618,15 @@ th, td {
   padding: 2px;
   text-align: center; }
 
-@media only screen and (min-width: 1024px) and (max-width: 1200px) {
+@media only screen and (min-width: 1024px) and (max-width: 1199px) {
   .img-logo {
-    width: 340px;
+    width: 240px;
     display: block;
     margin-right: auto;
     margin-left: auto; }
 
   .quote {
-    font-size: 53px; }
+    font-size: 55px; }
 
   .footer-rights {
     font-size: 12px;
@@ -626,14 +636,156 @@ th, td {
     font-size: 24px !important; }
 
   .social-icons {
-    margin: 20px 0 0 50px; }
+    margin-top: 20px; }
     .social-icons li {
       margin-right: 10px; }
 
-  .phone, .hours-table {
-    font-size: 25px; }
+  .header {
+    padding: 20px 10px 0 0; }
 
-  .phone {
-    display: inline-block; } }
+  .phone, .hours-table {
+    font-size: 20px; }
+
+  .footer-big-screens {
+    display: none; } }
+html {
+  height: 100%;
+  min-height: 100%; }
+
+.test-border {
+  border: 1px solid black; }
+
+body {
+  margin: 0;
+  padding: 0;
+  color: white;
+  background: url("../images/home-page/sheeps-hi-res-compressor.jpg") no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover; }
+
+@font-face {
+  font-family: 'Greek';
+  src: url(fonts/GFSSolomos.otf); }
+.quote {
+  font-family: 'Greek';
+  margin: 10px 0; }
+
+ul {
+  padding: 0; }
+
+a {
+  color: white; }
+
+.social-icons li {
+  display: inline-block; }
+
+@media (max-width: 1024px) {
+  .navbar-header {
+    float: none; }
+
+  .navbar-left, .navbar-right {
+    float: none !important; }
+
+  .navbar-toggle {
+    display: block; }
+
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
+
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px; }
+
+  .navbar-collapse.collapse {
+    display: none !important; }
+
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7.5px; }
+
+  .navbar-nav > li {
+    float: none; }
+
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+
+  .collapse.in {
+    display: block !important; } }
+.badge.facebook {
+  background-color: #3b5998; }
+.badge.twitter {
+  background-color: #1dcaff; }
+.badge.pinterest {
+  background-color: #cb2027; }
+.badge.instagram {
+  background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
+.navbar-default {
+  background-color: #10230f; }
+  .navbar-default .navbar-brand {
+    color: white; }
+
+.navbar-default.navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: white; }
+
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  font-size: large; }
+
+.display-inline {
+  display: inline-block; }
+
+.bottom-row {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0; }
+  .bottom-row .navbar {
+    margin-bottom: 0; }
+
+.hours-table {
+  padding: 15px;
+  text-align: center; }
+
+th, td {
+  padding: 2px;
+  text-align: center; }
+
+@media only screen and (min-width: 1199px) {
+  .footer-rights {
+    display: none; }
+
+  .fa-size {
+    font-size: 25px !important; }
+
+  .social-icons {
+    margin-top: 20px; }
+    .social-icons li {
+      margin-right: 10px; }
+
+  .header {
+    padding: 20px 20px 0 0; }
+
+  .img-logo {
+    width: 280px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto; }
+
+  .footer-big-screens {
+    padding-top: 10px;
+    font-size: 9px;
+    text-align: center; }
+
+  .phone, .hours-table {
+    font-size: 22px; }
+
+  .quote {
+    font-size: 55px; } }
 
 /*# sourceMappingURL=customStylesheet.css.map */
