Animation for history page
- Testing animation for history page

--- a/css/variables.scss
+++ b/css/variables.scss
@@ -9,6 +9,8 @@ $pinterest : #cb2027;
 
 //Navbar color
 $navbar-color : #10230f;
+$ham-lines : #888;
+$ham-border-color: #ddd;
 
 //Social media icons special size
 $ipad-size : 24px;
