--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -1,3 +1,116 @@
+/* adjust body when menu is open */
+body {
+  overflow-x: hidden; }
+
+body.slide-active {
+  overflow-x: hidden; }
+
+/*first child of #page-content so it doesn't shift around*/
+.no-margin-top {
+  margin-top: 0px !important; }
+
+/*wrap the entire page content but not nav inside this div if not a fixed top, don't add any top padding */
+#page-content {
+  position: relative;
+  left: 0; }
+
+#page-content.slide-active {
+  padding-top: 0; }
+
+/* put toggle bars on the left :: not using button */
+#slide-nav .navbar-toggle {
+  line-height: 0;
+  float: left;
+  margin-right: 0; }
+
+/* icon bar prettyup - optional */
+#slide-nav .navbar-toggle.slide-active .icon-bar {
+  background: orange; }
+
+.navbar-header {
+  position: relative; }
+
+/* un fix the navbar when active so that all the menu items are accessible */
+.navbar.navbar-fixed-top.slide-active {
+  position: relative; }
+
+/* screw writing importants and shit, just stick it in max width since these classes are not shared between sizes */
+@media (max-width: 767px) {
+  #slide-nav .container {
+    margin: 0;
+    padding: 0 !important; }
+
+  #slide-nav .navbar-header {
+    margin: 0 auto;
+    padding: 0 15px; }
+
+  #slide-nav .navbar.slide-active {
+    position: absolute;
+    width: 80%;
+    top: -1px;
+    z-index: 1000; }
+
+  #slide-nav #slidemenu {
+    background: #f7f7f7;
+    left: -100%;
+    width: 80%;
+    min-width: 0;
+    position: absolute;
+    padding-left: 0;
+    z-index: 2;
+    top: 0px;
+    margin: 0; }
+
+  #slide-nav #slidemenu .navbar-nav {
+    min-width: 0;
+    width: 100%;
+    margin: 0; }
+
+  #slide-nav #slidemenu .navbar-nav .dropdown-menu li a {
+    min-width: 0;
+    width: 80%;
+    white-space: normal; }
+
+  #slide-nav {
+    border-top: 0; }
+
+  #slide-nav.navbar-inverse #slidemenu {
+    background: #333; }
+
+  /* this is behind the navigation but the navigation is not inside it so that the navigation is accessible and scrolls*/
+  #slide-nav #navbar-height-col {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 80%;
+    left: -80%; }
+
+  #slide-nav.navbar-inverse #navbar-height-col {
+    background: #333;
+    z-index: 1;
+    border: 0; }
+
+  #slide-nav .navbar-form {
+    width: 100%;
+    margin: 8px 0;
+    text-align: center;
+    overflow: hidden;
+    /*fast clearfixer*/ }
+
+  #slide-nav .navbar-form .form-control {
+    text-align: center; }
+
+  #slide-nav .navbar-form .btn {
+    width: 100%; } }
+@media (min-width: 768px) {
+  #page-content {
+    left: 0 !important; }
+
+  .navbar.navbar-fixed-top.slide-active {
+    position: fixed; }
+
+  .navbar-header {
+    left: 0 !important; } }
 html {
   height: 100%;
   min-height: 100%; }
@@ -8,8 +121,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: black;
-  background: url("../../images/history/cowbackground.jpg") no-repeat center center fixed;
+  color: #10230f;
+  background: url("../../images/history/cows-nice.jpg") no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover; }
@@ -23,57 +136,188 @@ ul {
   .navbar-default .navbar-brand {
     color: white; }
 
-.navbar-custom {
-  height: 50px;
-  line-height: 50px;
-  background-color: #10230f;
-  margin-top: 10px; }
+.img-center {
+  display: block;
+  margin-right: auto;
+  margin-left: auto; }
 
-.menu-info {
-  color: white;
-  vertical-align: top;
-  display: inline-block; }
+@media only screen and (max-width: 480px) {
+  .navbar-custom {
+    height: 50px;
+    line-height: 50px;
+    background-color: #10230f;
+    margin-top: 10px; }
 
-.fa-bars {
-  background-color: #10230f;
-  font-size: 20px !important;
-  color: #888;
-  padding: 6px 9px;
-  border: 1px solid;
-  border-color: #ddd;
-  border-radius: 5px;
-  margin: 8px; }
+  .menu-info {
+    color: white;
+    vertical-align: top;
+    display: inline-block; }
 
-.social-icons li {
-  display: inline-block; }
+  .fa-bars {
+    background-color: #10230f;
+    font-size: 20px !important;
+    color: #888;
+    padding: 6px 9px;
+    border: 1px solid;
+    border-color: #ddd;
+    border-radius: 5px;
+    margin: 8px; }
 
-.badge.facebook {
-  background-color: #3b5998; }
-.badge.twitter {
-  background-color: #1dcaff; }
-.badge.pinterest {
-  background-color: #cb2027; }
-.badge.instagram {
-  background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+  .social-icons li {
+    display: inline-block; }
 
-.hours {
-  padding: 2px 0 0 10px; }
+  .badge.facebook {
+    background-color: #3b5998; }
+  .badge.twitter {
+    background-color: #1dcaff; }
+  .badge.pinterest {
+    background-color: #cb2027; }
+  .badge.instagram {
+    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
 
-.logo {
-  width: 140px; }
+  .hours {
+    padding: 2px 0 0 10px; }
 
-.logo-absolute {
-  position: absolute;
-  top: 0.5em;
-  left: 14em; }
+  .logo {
+    width: 120px; }
 
-.top-icons-nav {
-  padding-top: 15px;
-  position: absolute;
-  top: -150px; }
+  .logo-absolute {
+    position: absolute;
+    top: -60px;
+    right: 20px; }
 
-.menu-links {
-  background-color: #10230f;
-  width: 100px; }
+  .top-icons-nav {
+    padding-top: 15px;
+    position: absolute;
+    top: -150px; }
+
+  .menu-links {
+    background-color: #10230f;
+    width: 100px; }
+
+  .article-with-opacity {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.9); }
+
+  p {
+    padding: 10px;
+    text-indent: 15px;
+    font-size: 16px;
+    text-align: justify; }
+
+  .image-figure {
+    margin-top: 20px;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0.9); }
+    .image-figure figcaption {
+      color: #10230f;
+      padding: 10px 25px; }
+
+  .footer {
+    padding: 5px;
+    margin-top: 30px;
+    background-color: #10230f;
+    color: white;
+    text-align: center; }
+
+  .footer-rights {
+    font-size: 10px;
+    text-align: center; }
+
+  .navbar-default .navbar-nav > li > a {
+    color: white; }
+
+  .navbar-nav {
+    background-color: #10230f; } }
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  .navbar-custom {
+    height: 50px;
+    line-height: 50px;
+    background-color: #10230f;
+    margin-top: 10px; }
+
+  .menu-info {
+    color: white;
+    vertical-align: top;
+    display: inline-block; }
+
+  .fa-bars {
+    background-color: #10230f;
+    font-size: 20px !important;
+    color: #888;
+    padding: 6px 9px;
+    border: 1px solid;
+    border-color: #ddd;
+    border-radius: 5px;
+    margin: 8px; }
+
+  .social-icons li {
+    display: inline-block; }
+
+  .badge.facebook {
+    background-color: #3b5998; }
+  .badge.twitter {
+    background-color: #1dcaff; }
+  .badge.pinterest {
+    background-color: #cb2027; }
+  .badge.instagram {
+    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
+  .hours {
+    padding: 2px 0 0 10px; }
+
+  .logo {
+    width: 120px; }
+
+  .logo-absolute {
+    position: absolute;
+    top: -60px;
+    right: 20px; }
+
+  .top-icons-nav {
+    padding-top: 15px;
+    position: absolute;
+    top: -150px; }
+
+  .menu-links {
+    background-color: #10230f;
+    width: 100px; }
+
+  .article-with-opacity {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.9); }
+
+  p {
+    padding: 10px;
+    text-indent: 15px;
+    font-size: 16px;
+    text-align: justify; }
+
+  .image-figure {
+    margin-top: 20px;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0.9); }
+    .image-figure figcaption {
+      color: #10230f;
+      padding: 10px 25px; }
+
+  .footer {
+    padding: 5px;
+    margin-top: 30px;
+    background-color: #10230f;
+    color: white;
+    text-align: center; }
+
+  .footer-rights {
+    font-size: 10px;
+    text-align: center; }
+
+  .navbar-default .navbar-nav > li > a {
+    color: white; }
+
+  .navbar-nav {
+    background-color: #10230f; } }
 
 /*# sourceMappingURL=non-main-pages.css.map */
