--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -35,7 +35,7 @@ body.slide-active {
   position: relative; }
 
 /* screw writing importants and shit, just stick it in max width since these classes are not shared between sizes */
-@media (max-width: 767px) {
+@media (max-width: 1024px) {
   #slide-nav .container {
     margin: 0;
     padding: 0 !important; }
@@ -102,7 +102,7 @@ body.slide-active {
 
   #slide-nav .navbar-form .btn {
     width: 100%; } }
-@media (min-width: 768px) {
+@media (min-width: 1025px) {
   #page-content {
     left: 0 !important; }
 
@@ -111,6 +111,40 @@ body.slide-active {
 
   .navbar-header {
     left: 0 !important; } }
+@media (max-width: 1024px) {
+  .navbar-header {
+    float: none; }
+
+  .navbar-left, .navbar-right {
+    float: none !important; }
+
+  .navbar-toggle {
+    display: block; }
+
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
+
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px; }
+
+  .navbar-collapse.collapse {
+    display: none !important; }
+
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7.5px; }
+
+  .navbar-nav > li {
+    float: none; }
+
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px; }
+
+  .collapse.in {
+    display: block !important; } }
 html {
   height: 100%;
   min-height: 100%; }
@@ -319,5 +353,318 @@ ul {
 
   .navbar-nav {
     background-color: #10230f; } }
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .navbar-custom {
+    height: 50px;
+    line-height: 50px;
+    background-color: #10230f; }
+
+  .navbar-default {
+    margin-top: 120px; }
+
+  #slide-nav .navbar-toggle {
+    margin-right: 10px;
+    margin-left: 20px; }
+
+  .menu-info {
+    color: white;
+    vertical-align: top;
+    display: inline-block; }
+
+  .fa-bars {
+    background-color: #10230f;
+    font-size: 20px !important;
+    color: #888;
+    padding: 6px 9px;
+    border: 1px solid;
+    border-color: #ddd;
+    border-radius: 5px;
+    margin: 8px; }
+
+  .social-icons li {
+    display: inline-block; }
+
+  .fa-size {
+    font-size: 24px !important; }
+
+  .phone, .hours-table {
+    font-size: 25px; }
+
+  .social-icons li {
+    margin-right: 10px; }
+
+  .badge.facebook {
+    background-color: #3b5998; }
+  .badge.twitter {
+    background-color: #1dcaff; }
+  .badge.pinterest {
+    background-color: #cb2027; }
+  .badge.instagram {
+    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
+  .logo {
+    width: 180px; }
+
+  .logo-absolute {
+    position: absolute;
+    top: -110px;
+    right: 20px; }
+
+  .top-icons-nav {
+    position: absolute;
+    top: -160px;
+    left: 40px; }
+
+  .menu-links {
+    background-color: #10230f;
+    width: 100px; }
+
+  .article-with-opacity {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.9); }
+
+  p {
+    padding: 10px;
+    text-indent: 15px;
+    font-size: 16px;
+    text-align: justify; }
+
+  .image-figure {
+    margin-top: 20px;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0.9); }
+    .image-figure figcaption {
+      color: #10230f;
+      padding: 10px 25px; }
+
+  .footer {
+    padding: 5px;
+    margin-top: 30px;
+    background-color: #10230f;
+    color: white;
+    text-align: center; }
+
+  .footer-rights {
+    font-size: 10px;
+    text-align: center; }
+
+  .navbar-default .navbar-nav > li > a {
+    color: white; }
+
+  .navbar-nav {
+    background-color: #10230f; } }
+@media only screen and (min-width: 1024px) and (max-width: 1199px) {
+  .navbar-custom {
+    height: 50px;
+    line-height: 50px;
+    background-color: #10230f; }
+
+  .navbar-default {
+    margin-top: 120px; }
+
+  #slide-nav .navbar-toggle {
+    margin-right: 10px;
+    margin-left: 30px; }
+
+  .menu-info {
+    color: white;
+    vertical-align: top;
+    display: inline-block; }
+
+  .fa-bars {
+    background-color: #10230f;
+    font-size: 20px !important;
+    color: #888;
+    padding: 6px 9px;
+    border: 1px solid;
+    border-color: #ddd;
+    border-radius: 5px;
+    margin: 8px; }
+
+  .social-icons li {
+    display: inline-block; }
+
+  .fa-size {
+    font-size: 24px !important; }
+
+  .phone, .hours-table {
+    font-size: 25px; }
+
+  .social-icons li {
+    margin-right: 10px; }
+
+  .badge.facebook {
+    background-color: #3b5998; }
+  .badge.twitter {
+    background-color: #1dcaff; }
+  .badge.pinterest {
+    background-color: #cb2027; }
+  .badge.instagram {
+    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
+  .logo {
+    width: 180px; }
+
+  .logo-absolute {
+    position: absolute;
+    top: -110px;
+    right: 20px; }
+
+  .top-icons-nav {
+    position: absolute;
+    top: -160px;
+    left: 40px; }
+
+  .menu-links {
+    background-color: #10230f;
+    width: 100px; }
+
+  .article-with-opacity {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.9); }
+
+  p {
+    padding: 10px;
+    text-indent: 15px;
+    font-size: 16px;
+    text-align: justify; }
+
+  .image-figure {
+    margin-top: 20px;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0.9); }
+    .image-figure figcaption {
+      color: #10230f;
+      padding: 10px 25px; }
+
+  .footer {
+    padding: 5px;
+    margin-top: 30px;
+    background-color: #10230f;
+    color: white;
+    text-align: center; }
+
+  .footer-rights {
+    font-size: 10px;
+    text-align: center; }
+
+  .navbar-default .navbar-nav > li > a {
+    color: white; }
+
+  .navbar-nav {
+    background-color: #10230f; } }
+@media only screen and (min-width: 1200px) {
+  .navbar-custom {
+    height: 50px;
+    line-height: 50px;
+    background-color: #10230f; }
+
+  .navbar-default {
+    margin-top: 120px; }
+
+  #slide-nav .navbar-toggle {
+    margin-right: 10px;
+    margin-left: 30px; }
+
+  .menu-info {
+    color: white;
+    vertical-align: top;
+    display: inline-block; }
+
+  .fa-bars {
+    background-color: #10230f;
+    font-size: 20px !important;
+    color: #888;
+    padding: 6px 9px;
+    border: 1px solid;
+    border-color: #ddd;
+    border-radius: 5px;
+    margin: 8px; }
+
+  .social-icons li {
+    display: inline-block; }
+
+  .fa-size {
+    font-size: 24px !important; }
+
+  .phone, .hours-table {
+    font-size: 25px; }
+
+  .social-icons li {
+    margin-right: 10px; }
+
+  .badge.facebook {
+    background-color: #3b5998; }
+  .badge.twitter {
+    background-color: #1dcaff; }
+  .badge.pinterest {
+    background-color: #cb2027; }
+  .badge.instagram {
+    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
+  .logo {
+    width: 180px; }
+
+  .logo-absolute {
+    position: absolute;
+    top: -110px;
+    left: 900px; }
+
+  .top-icons-nav {
+    position: absolute;
+    top: -160px;
+    left: 14%; }
+
+  .menu-links {
+    background-color: #10230f;
+    width: 100px; }
+
+  .article-with-opacity {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    height: 500px; }
+
+  p {
+    padding: 10px;
+    text-indent: 15px;
+    font-size: 16px;
+    text-align: justify; }
+
+  .image-figure {
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0.9); }
+    .image-figure figcaption {
+      color: #10230f;
+      padding: 10px 25px; }
+
+  .footer {
+    padding: 5px;
+    margin-top: 30px;
+    background-color: #10230f;
+    color: white;
+    text-align: center; }
+
+  .footer-rights {
+    font-size: 10px;
+    text-align: center; }
+
+  .navbar-default .navbar-nav > li > a {
+    color: white; }
+
+  .navbar-nav {
+    background-color: #10230f; }
+
+  .full-article {
+    background-color: rgba(255, 255, 255, 0.9); }
+
+  .navbar {
+    border-radius: 0; }
+
+  .navbar-default {
+    border: none;
+    border-bottom: 1px solid white; } }
 
 /*# sourceMappingURL=non-main-pages.css.map */
