--- a/css/non-main-pages/slide-menu/slide-menu.scss
+++ b/css/non-main-pages/slide-menu/slide-menu.scss
@@ -16,7 +16,7 @@ body.slide-active {
   left: 0;
 }
 #page-content.slide-active {
-  padding-top: 0
+  padding-top: 0;
 }
 /* put toggle bars on the left :: not using button */
 #slide-nav .navbar-toggle {
@@ -40,7 +40,7 @@ body.slide-active {
   position: relative
 }
 /* screw writing importants and shit, just stick it in max width since these classes are not shared between sizes */
-@media (max-width:767px) {
+@media (max-width:1024px) {
   #slide-nav .container {
     margin: 0;
     padding: 0!important;
@@ -110,7 +110,7 @@ body.slide-active {
     width: 100%
   }
 }
-@media (min-width:768px) {
+@media (min-width:1025px) {
   #page-content {
     left: 0!important
   }
@@ -121,3 +121,41 @@ body.slide-active {
     left: 0!important
   }
 }
+
+@media (max-width: 1024px) {
+  .navbar-header {
+    float: none;
+  }
+  .navbar-left,.navbar-right {
+    float: none !important;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+    display: none!important;
+  }
+  .navbar-nav {
+    float: none!important;
+    margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+    float: none;
+  }
+  .navbar-nav>li>a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .collapse.in{
+    display:block !important;
+  }
+}
+
