--- a/css/non-main-pages/large-screens/non-main-large.scss
+++ b/css/non-main-pages/large-screens/non-main-large.scss
@@ -3,144 +3,43 @@
 //==========Medium iPad portrait screens==============
 @media only screen and (min-width:1200px) {
 
-  //Navbar custom
-  .navbar-custom {
-    height: 50px;
-    line-height: 50px;
-    background-color: $navbar-color;
-
-  }
-
-  .navbar-default{
-    margin-top: 120px;
-  }
-
-
-
-  #slide-nav .navbar-toggle {
-    margin-right: 10px ;
-    margin-left: 30px;
-
-  }
-
-  .menu-info {
-    color: white;
-    vertical-align: top;
-    display: inline-block;
-  }
-
-  .fa-bars {
-    background-color: $navbar-color;
-    font-size: 20px !important;
-    color: $ham-lines;
-    padding: 6px 9px;
-    border: 1px solid;
-    border-color: $ham-border-color;
-    border-radius: 5px;
-    margin: 8px
-
-  }
-
-  //Social icons display
-  @mixin social-icons($color) {
-    background-color: $color;
-  }
-  .social-icons {
-    & li {
-      display: inline-block;
-    }
-  }
-  .fa-size{
-    font-size: $ipad-size !important;
-  }
-  .phone,.hours-table{
-    font-size: 25px;
-
-  }
-
-
-  .social-icons{
-
-    li{
-      margin-right: 10px;
-    }
-
-  }
-  @mixin instagram-pallete {
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
-
-  }
-  .badge {
-    &.facebook {
-      @include social-icons($facebook);
-    }
-    &.twitter {
-      @include social-icons($twitter);
-    }
-    &.pinterest {
-      @include social-icons($pinterest);
-    }
-    &.instagram {
-      @include instagram-pallete;
-    }
+  .top-icons-nav{
+    padding: 35px 0 8px 0px;
   }
 
 
   .logo {
     width: 180px;
+
   }
+
 
   .logo-absolute {
     position: absolute;
-    top: -110px;
-    left: 900px;
+    top: 10px;
+    right:50px;
+    z-index: 999;
   }
 
-  .top-icons-nav {
-    position: absolute;
-    top: -160px;
-    left :14%;
+  .hours{
+    font-size: $large-size;
   }
 
-  .menu-links {
-    background-color: $navbar-color;
-    width: 100px;
-  }
-
-  .article-with-opacity{
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255,0.9);
-    height: 500px ;
-  }
-
-  p{
-    padding: 10px;
-    text-indent: 15px;
-    font-size: 16px;
-    text-align: justify;
-
-
+  .fa-size{
+    font-size: $large-size !important;
   }
 
   .image-figure{
-    padding: 0;
-    background-color: rgba(255, 255, 255,0.9);
-    & figcaption{
-      color: $navbar-color;
-      padding: 10px 25px;
-
-    }
+    margin-top: 0px;
   }
 
   .footer{
-    padding: 5px;
-    margin-top: 30px;
-    background-color: $navbar-color;
-    color: white;
-    text-align: center;
+    height: 60px;
   }
 
+  .article-with-opacity{
+    height: 485px;
+  }
   .footer-rights{
     font-size: 10px;
     text-align: center;
