--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -1,10 +1,4 @@
 /* adjust body when menu is open */
-body {
-  overflow-x: hidden; }
-
-body.slide-active {
-  overflow-x: hidden; }
-
 /*first child of #page-content so it doesn't shift around*/
 .no-margin-top {
   margin-top: 0px !important; }
@@ -15,6 +9,13 @@ body.slide-active {
   left: 0; }
 
 #page-content.slide-active {
+  padding-top: 0; }
+
+#top-icons {
+  position: relative;
+  left: 0; }
+
+#top-icons.slide-active {
   padding-top: 0; }
 
 /* put toggle bars on the left :: not using button */
@@ -42,7 +43,7 @@ body.slide-active {
 
   #slide-nav .navbar-header {
     margin: 0 auto;
-    padding: 0 15px; }
+    padding: 0 20px; }
 
   #slide-nav .navbar.slide-active {
     position: absolute;
@@ -161,99 +162,105 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover; }
 
+.social-icons li {
+  display: inline-block; }
+
+.badge.facebook {
+  background-color: #3b5998; }
+.badge.twitter {
+  background-color: #1dcaff; }
+.badge.pinterest {
+  background-color: #cb2027; }
+.badge.instagram {
+  background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+
 ul {
   padding: 0; }
 
+.article-with-opacity {
+  border-radius: 10px;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.9); }
+
+p {
+  padding: 10px;
+  text-indent: 15px;
+  font-size: 16px;
+  text-align: justify; }
+
+.image-figure {
+  margin-top: 20px;
+  padding: 0;
+  background-color: rgba(255, 255, 255, 0.9); }
+  .image-figure figcaption {
+    color: #10230f;
+    padding: 10px 25px; }
+
+.footer {
+  padding: 5px;
+  margin-top: 30px;
+  background-color: #10230f;
+  color: white;
+  text-align: center; }
+
+address {
+  margin: 0; }
+
 .navbar-default {
-  margin-top: 80px;
   background-color: #10230f; }
   .navbar-default .navbar-brand {
     color: white; }
+
+.navbar-default .navbar-nav > li > a {
+  color: white; }
+
+.navbar-nav {
+  background-color: #10230f; }
 
 .img-center {
   display: block;
   margin-right: auto;
   margin-left: auto; }
 
-@media only screen and (max-width: 480px) {
-  .navbar-custom {
-    height: 50px;
-    line-height: 50px;
-    background-color: #10230f;
-    margin-top: 10px; }
+@media only screen and (max-width: 479px) {
+  .logo {
+    width: 100px; }
 
-  .menu-info {
-    color: white;
-    vertical-align: top;
-    display: inline-block; }
+  .navbar-brand {
+    font-size: 12px; }
 
-  .fa-bars {
-    background-color: #10230f;
-    font-size: 20px !important;
-    color: #888;
-    padding: 6px 9px;
-    border: 1px solid;
-    border-color: #ddd;
-    border-radius: 5px;
-    margin: 8px; }
+  .logo-absolute {
+    position: absolute;
+    top: 40px;
+    right: 20px;
+    z-index: 999; }
 
-  .social-icons li {
-    display: inline-block; }
+  .top-icons-nav {
+    padding: 8px 0 8px 15px; }
 
-  .badge.facebook {
-    background-color: #3b5998; }
-  .badge.twitter {
-    background-color: #1dcaff; }
-  .badge.pinterest {
-    background-color: #cb2027; }
-  .badge.instagram {
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+  .footer {
+    padding: 5px;
+    margin-top: 30px;
+    height: 120px; }
 
-  .hours {
-    padding: 2px 0 0 10px; }
-
+  .footer-rights {
+    font-size: 10px;
+    text-align: center; } }
+@media only screen and (min-width: 480px) and (max-width: 719px) {
   .logo {
     width: 120px; }
 
   .logo-absolute {
     position: absolute;
-    top: -60px;
-    right: 20px; }
+    top: 10px;
+    right: 40px;
+    z-index: 999; }
 
   .top-icons-nav {
-    padding-top: 15px;
-    position: absolute;
-    top: -150px; }
-
-  .menu-links {
-    background-color: #10230f;
-    width: 100px; }
-
-  .article-with-opacity {
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.9); }
-
-  p {
-    padding: 10px;
-    text-indent: 15px;
-    font-size: 16px;
-    text-align: justify; }
-
-  .image-figure {
-    margin-top: 20px;
-    padding: 0;
-    background-color: rgba(255, 255, 255, 0.9); }
-    .image-figure figcaption {
-      color: #10230f;
-      padding: 10px 25px; }
+    padding: 10px 0 8px 15px; }
 
   .footer {
-    padding: 5px;
-    margin-top: 30px;
-    background-color: #10230f;
-    color: white;
-    text-align: center; }
+    height: 130px; }
 
   .footer-rights {
     font-size: 10px;
@@ -264,186 +271,40 @@ ul {
 
   .navbar-nav {
     background-color: #10230f; } }
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-  .navbar-custom {
-    height: 50px;
-    line-height: 50px;
-    background-color: #10230f;
-    margin-top: 10px; }
-
-  .menu-info {
-    color: white;
-    vertical-align: top;
-    display: inline-block; }
-
-  .fa-bars {
-    background-color: #10230f;
-    font-size: 20px !important;
-    color: #888;
-    padding: 6px 9px;
-    border: 1px solid;
-    border-color: #ddd;
-    border-radius: 5px;
-    margin: 8px; }
-
-  .social-icons li {
-    display: inline-block; }
-
-  .badge.facebook {
-    background-color: #3b5998; }
-  .badge.twitter {
-    background-color: #1dcaff; }
-  .badge.pinterest {
-    background-color: #cb2027; }
-  .badge.instagram {
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
-
-  .hours {
-    padding: 2px 0 0 10px; }
+@media only screen and (min-width: 720px) and (max-width: 767px) {
+  .top-icons-nav {
+    padding: 25px 0 8px 15px; }
 
   .logo {
-    width: 120px; }
+    width: 140px; }
 
   .logo-absolute {
     position: absolute;
-    top: -60px;
-    right: 20px; }
-
-  .top-icons-nav {
-    padding-top: 15px;
-    position: absolute;
-    top: -150px; }
-
-  .menu-links {
-    background-color: #10230f;
-    width: 100px; }
-
-  .article-with-opacity {
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.9); }
-
-  p {
-    padding: 10px;
-    text-indent: 15px;
-    font-size: 16px;
-    text-align: justify; }
-
-  .image-figure {
-    margin-top: 20px;
-    padding: 0;
-    background-color: rgba(255, 255, 255, 0.9); }
-    .image-figure figcaption {
-      color: #10230f;
-      padding: 10px 25px; }
-
-  .footer {
-    padding: 5px;
-    margin-top: 30px;
-    background-color: #10230f;
-    color: white;
-    text-align: center; }
-
-  .footer-rights {
-    font-size: 10px;
-    text-align: center; }
-
-  .navbar-default .navbar-nav > li > a {
-    color: white; }
-
-  .navbar-nav {
-    background-color: #10230f; } }
+    top: 10px;
+    right: 40px;
+    z-index: 999; } }
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
-  .navbar-custom {
-    height: 50px;
-    line-height: 50px;
-    background-color: #10230f; }
-
-  .navbar-default {
-    margin-top: 120px; }
-
   #slide-nav .navbar-toggle {
-    margin-right: 10px;
-    margin-left: 20px; }
-
-  .menu-info {
-    color: white;
-    vertical-align: top;
-    display: inline-block; }
-
-  .fa-bars {
-    background-color: #10230f;
-    font-size: 20px !important;
-    color: #888;
-    padding: 6px 9px;
-    border: 1px solid;
-    border-color: #ddd;
-    border-radius: 5px;
-    margin: 8px; }
-
-  .social-icons li {
-    display: inline-block; }
-
-  .fa-size {
-    font-size: 24px !important; }
-
-  .phone, .hours-table {
-    font-size: 25px; }
-
-  .social-icons li {
     margin-right: 10px; }
 
-  .badge.facebook {
-    background-color: #3b5998; }
-  .badge.twitter {
-    background-color: #1dcaff; }
-  .badge.pinterest {
-    background-color: #cb2027; }
-  .badge.instagram {
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+  #slide-nav .navbar-header {
+    margin: 0 auto;
+    padding: 0 30px; }
+
+  .footer {
+    height: 120px; }
 
   .logo {
-    width: 180px; }
+    width: 120px; }
 
   .logo-absolute {
     position: absolute;
-    top: -110px;
-    right: 20px; }
+    top: 10px;
+    right: 40px;
+    z-index: 999; }
 
   .top-icons-nav {
-    position: absolute;
-    top: -160px;
-    left: 40px; }
-
-  .menu-links {
-    background-color: #10230f;
-    width: 100px; }
-
-  .article-with-opacity {
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.9); }
-
-  p {
-    padding: 10px;
-    text-indent: 15px;
-    font-size: 16px;
-    text-align: justify; }
-
-  .image-figure {
-    margin-top: 20px;
-    padding: 0;
-    background-color: rgba(255, 255, 255, 0.9); }
-    .image-figure figcaption {
-      color: #10230f;
-      padding: 10px 25px; }
-
-  .footer {
-    padding: 5px;
-    margin-top: 30px;
-    background-color: #10230f;
-    color: white;
-    text-align: center; }
+    padding: 10px 0 8px 25px; }
 
   .footer-rights {
     font-size: 10px;
@@ -455,35 +316,24 @@ ul {
   .navbar-nav {
     background-color: #10230f; } }
 @media only screen and (min-width: 1024px) and (max-width: 1199px) {
-  .navbar-custom {
-    height: 50px;
-    line-height: 50px;
-    background-color: #10230f; }
-
-  .navbar-default {
-    margin-top: 120px; }
-
   #slide-nav .navbar-toggle {
-    margin-right: 10px;
-    margin-left: 30px; }
+    margin-right: 10px; }
 
-  .menu-info {
-    color: white;
-    vertical-align: top;
-    display: inline-block; }
+  #slide-nav .navbar-header {
+    margin: 0 auto;
+    padding: 0 45px; }
 
-  .fa-bars {
-    background-color: #10230f;
-    font-size: 20px !important;
-    color: #888;
-    padding: 6px 9px;
-    border: 1px solid;
-    border-color: #ddd;
-    border-radius: 5px;
-    margin: 8px; }
+  .logo {
+    width: 180px; }
 
-  .social-icons li {
-    display: inline-block; }
+  .logo-absolute {
+    position: absolute;
+    top: 10px;
+    right: 50px;
+    z-index: 999; }
+
+  .top-icons-nav {
+    padding: 30px 0 8px 15px; }
 
   .fa-size {
     font-size: 24px !important; }
@@ -491,64 +341,8 @@ ul {
   .phone, .hours-table {
     font-size: 25px; }
 
-  .social-icons li {
-    margin-right: 10px; }
-
-  .badge.facebook {
-    background-color: #3b5998; }
-  .badge.twitter {
-    background-color: #1dcaff; }
-  .badge.pinterest {
-    background-color: #cb2027; }
-  .badge.instagram {
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
-
-  .logo {
-    width: 180px; }
-
-  .logo-absolute {
-    position: absolute;
-    top: -110px;
-    right: 20px; }
-
-  .top-icons-nav {
-    position: absolute;
-    top: -160px;
-    left: 40px; }
-
-  .menu-links {
-    background-color: #10230f;
-    width: 100px; }
-
-  .article-with-opacity {
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.9); }
-
-  p {
-    padding: 10px;
-    text-indent: 15px;
-    font-size: 16px;
-    text-align: justify; }
-
-  .image-figure {
-    margin-top: 20px;
-    padding: 0;
-    background-color: rgba(255, 255, 255, 0.9); }
-    .image-figure figcaption {
-      color: #10230f;
-      padding: 10px 25px; }
-
   .footer {
-    padding: 5px;
-    margin-top: 30px;
-    background-color: #10230f;
-    color: white;
-    text-align: center; }
-
-  .footer-rights {
-    font-size: 10px;
-    text-align: center; }
+    height: 140px; }
 
   .navbar-default .navbar-nav > li > a {
     color: white; }
@@ -556,96 +350,32 @@ ul {
   .navbar-nav {
     background-color: #10230f; } }
 @media only screen and (min-width: 1200px) {
-  .navbar-custom {
-    height: 50px;
-    line-height: 50px;
-    background-color: #10230f; }
-
-  .navbar-default {
-    margin-top: 120px; }
-
-  #slide-nav .navbar-toggle {
-    margin-right: 10px;
-    margin-left: 30px; }
-
-  .menu-info {
-    color: white;
-    vertical-align: top;
-    display: inline-block; }
-
-  .fa-bars {
-    background-color: #10230f;
-    font-size: 20px !important;
-    color: #888;
-    padding: 6px 9px;
-    border: 1px solid;
-    border-color: #ddd;
-    border-radius: 5px;
-    margin: 8px; }
-
-  .social-icons li {
-    display: inline-block; }
-
-  .fa-size {
-    font-size: 24px !important; }
-
-  .phone, .hours-table {
-    font-size: 25px; }
-
-  .social-icons li {
-    margin-right: 10px; }
-
-  .badge.facebook {
-    background-color: #3b5998; }
-  .badge.twitter {
-    background-color: #1dcaff; }
-  .badge.pinterest {
-    background-color: #cb2027; }
-  .badge.instagram {
-    background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00); }
+  .top-icons-nav {
+    padding: 35px 0 8px 0px; }
 
   .logo {
     width: 180px; }
 
   .logo-absolute {
     position: absolute;
-    top: -110px;
-    left: 900px; }
+    top: 10px;
+    right: 50px;
+    z-index: 999; }
 
-  .top-icons-nav {
-    position: absolute;
-    top: -160px;
-    left: 14%; }
+  .hours {
+    font-size: 25px; }
 
-  .menu-links {
-    background-color: #10230f;
-    width: 100px; }
-
-  .article-with-opacity {
-    border-radius: 10px;
-    margin-bottom: 20px;
-    background-color: rgba(255, 255, 255, 0.9);
-    height: 500px; }
-
-  p {
-    padding: 10px;
-    text-indent: 15px;
-    font-size: 16px;
-    text-align: justify; }
+  .fa-size {
+    font-size: 25px !important; }
 
   .image-figure {
-    padding: 0;
-    background-color: rgba(255, 255, 255, 0.9); }
-    .image-figure figcaption {
-      color: #10230f;
-      padding: 10px 25px; }
+    margin-top: 0px; }
 
   .footer {
-    padding: 5px;
-    margin-top: 30px;
-    background-color: #10230f;
-    color: white;
-    text-align: center; }
+    height: 60px; }
+
+  .article-with-opacity {
+    height: 485px; }
 
   .footer-rights {
     font-size: 10px;
@@ -666,5 +396,13 @@ ul {
   .navbar-default {
     border: none;
     border-bottom: 1px solid white; } }
+@media only screen and (min-width: 1200px) and (min-height: 800px) {
+  .footer {
+    bottom: 0;
+    position: absolute;
+    width: 100%; }
+
+  footer {
+    display: block; } }
 
 /*# sourceMappingURL=non-main-pages.css.map */
