--- a/css/non-main-pages/non-main-pages.scss
+++ b/css/non-main-pages/non-main-pages.scss
@@ -23,17 +23,92 @@ body{
 
 }
 
+//=====Social icons display=========
+@mixin social-icons($color) {
+  background-color: $color;
+}
+.social-icons {
+  & li {
+    display: inline-block;
+  }
+}
+
+@mixin instagram-pallete {
+  background: linear-gradient(#400080, transparent), linear-gradient(200deg, #d047d1, #ff0000, #ffff00);
+
+}
+.badge {
+  &.facebook {
+    @include social-icons($facebook);
+  }
+  &.twitter {
+    @include social-icons($twitter);
+  }
+  &.pinterest {
+    @include social-icons($pinterest);
+  }
+  &.instagram {
+    @include instagram-pallete;
+  }
+}
+//=====End social Icons=========
+
 ul{
   padding: 0;
 }
 
+.article-with-opacity{
+  border-radius: 10px;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255,0.9);
+}
+
+p{
+  padding: 10px;
+  text-indent: 15px;
+  font-size: 16px;
+  text-align: justify;
+
+}
+
+.image-figure{
+  margin-top: 20px;
+  padding: 0;
+  background-color: rgba(255, 255, 255,0.9);
+
+
+  & figcaption{
+    color: $navbar-color;
+    padding: 10px 25px;
+  }
+}
+
+.footer{
+  padding: 5px;
+  margin-top: 30px;
+  background-color: $navbar-color;
+  color: white;
+  text-align: center;
+}
+
+
+address{
+  margin: 0;
+}
 
 .navbar-default{
-  margin-top: 80px;
   background-color:#10230f ;
   .navbar-brand{
     color: white;
   }
+}
+
+.navbar-default .navbar-nav>li>a{
+  color: white;
+}
+.navbar-nav{
+  background-color: $navbar-color;
+
 }
 
 //Image center trick .
@@ -46,14 +121,20 @@ ul{
 //Screens to 480px
 @import "small-screens/non-main-small-screens";
 
-//Screens from 481px to 767px
+//Screens from 481px to 719px
 @import "small-medium-screens/non-main-small-medium";
 
+//Some galaxy and other androids strange res 720 to 767
+@import "galaxy-resolutions/galaxy-resolutions";
+
 //Screens from 768px to 1023px
-@import "medium-iPad-screens/non-main-medium-iPad-landscape";
+@import "iPad-screens/non-main-medium-iPad-landscape";
 
 //Screens from 1024px to 1199px
-@import "medium-iPad-screens/non-main-medium-iPad-portrait";
+@import "iPad-screens/non-main-medium-iPad-portrait";
 
-//Screens above 1200px
+//Screens above 1200px width
 @import "large-screens/non-main-large";
+
+//Screens above 1200px width and 800px height
+@import "xlarge-screens/non-main-xlarge";
