--- a/css/iPad-Medium-screens/iPad-portrait.scss
+++ b/css/iPad-Medium-screens/iPad-portrait.scss
@@ -4,7 +4,9 @@
 //=========iPad Landscape resolutions================
 @media only screen and (min-width:1024px) and(max-width:1199px) {
 
-
+  .phone{
+    width: 230px;
+  }
 
   .img-logo{
     width: 240px;
