--- a/css/non-main-pages/iPad-screens/non-main-medium-iPad-landscape.scss
+++ b/css/non-main-pages/iPad-screens/non-main-medium-iPad-landscape.scss
@@ -2,6 +2,29 @@
 
 //==========Medium iPad landscape screens==============
 @media only screen and (min-width:768px) and(max-width:1023px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+
+    .phone {
+      color: white;
+    }
+
+
+    h1 {
+      font-size: 25px;
+    }
+    .article-with-opacity {
+      border-radius: 10px;
+      margin-top: 400px;
+      margin-bottom: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white;
+
+    }
+  }
 
   #slide-nav .navbar-toggle {
     margin-right: 10px ;
