--- a/css/general-mixins.scss
+++ b/css/general-mixins.scss
@@ -4,6 +4,11 @@ html{
   min-height:100%;
 }
 
+@font-face {
+  font-family: 'Greek';
+  src: url(fonts/GFSSolomos.otf);
+}
+
 .test-border{
   border: 1px solid black;
 }
@@ -20,10 +25,15 @@ body{
 
 }
 
-@font-face {
-  font-family: 'Greek';
-  src: url(fonts/GFSSolomos.otf);
+.phone{
+  font-family: Greek;
+  padding: 5px;
+  border: 1px solid white;
+  border-radius: 20px;
 }
+
+
+
 
 
 .quote {
