--- a/css/non-main-pages/galaxy-resolutions/galaxy-resolutions.scss
+++ b/css/non-main-pages/galaxy-resolutions/galaxy-resolutions.scss
@@ -16,9 +16,36 @@
     z-index: 999;
   }
 
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+
+    .phone {
+      color: white;
+    }
 
 
+    h1 {
+      font-size: 25px;
+    }
+    .article-with-opacity {
+      border-radius: 10px;
+      margin-top: 400px;
+      margin-bottom: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white;
 
+    }
+  }
+
+  .footer{
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+
+  }
 
 
 }
