--- a/css/non-main-pages/iPad-screens/non-main-medium-iPad-portrait.scss
+++ b/css/non-main-pages/iPad-screens/non-main-medium-iPad-portrait.scss
@@ -1,7 +1,34 @@
 @import "../../variables";
 
 //==========Medium iPad portrait screens==============
-@media only screen and (min-width:1024px) and(max-width:1199px) {
+@media only screen and (width:1024px)  {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+
+    .phone {
+      color: white;
+    }
+
+
+    h1 {
+      font-size: 25px;
+    }
+
+
+  }
+
+
+
+  .iPad-portrait-left{
+   margin-left: 72%;
+  }
+  .iPad-portrait-left{
+    width: 29.6666%;
+  }
+
   #slide-nav .navbar-toggle {
     margin-right: 10px ;
 
@@ -53,9 +80,70 @@
 
 
 
+@media only screen and (min-width:1025px) and(max-width:1199px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+
+    .phone {
+      color: white;
+    }
 
 
+    h1 {
+      font-size: 27px;
+    }
+    .iPad-portrait-left{
+      margin-left: 72%;
+    }
+    .iPad-portrait-left{
+      width: 29.6666%;
+    }
 
+    .emphasis{
+      font-style: italic;
+      font-weight: bold;
+      font-size: 18px;
+      font-family: Greek;
+    }
+
+    .phone{
+      color: black;
+    }
+
+  }
+  #slide-nav .navbar-header {
+    margin: 0 auto;
+    padding: 0 0px;
+  }
+
+  .top-icons-nav{
+    padding: 5px 0 8px 0px;
+  }
+
+.navbar-default .navbar-nav>li>a{
+  color: white;
+  font-size: 12px;
+}
+
+.navbar-brand{
+  font-size: 16px;
+}
+
+.logo {
+  width: 110px;
+}
+
+  .logo-absolute {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    z-index: 999;
+  }
+
+}
 
 
 
