--- a/css/non-main-pages/non-main-pages.css
+++ b/css/non-main-pages/non-main-pages.css
@@ -1,3 +1,6 @@
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
 /* adjust body when menu is open */
 /*first child of #page-content so it doesn't shift around*/
 .no-margin-top {
@@ -71,9 +74,6 @@
     min-width: 0;
     width: 80%;
     white-space: normal; }
-
-  #slide-nav {
-    border-top: 0; }
 
   #slide-nav.navbar-inverse #slidemenu {
     background: #333; }
@@ -156,11 +156,45 @@ html {
 body {
   margin: 0;
   padding: 0;
-  color: black;
+  color: black; }
+
+#history {
   background: url("../../images/history/cowbackground.jpg") no-repeat center center fixed;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover; }
+  #history .article-with-opacity {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.4); }
+
+#butcher-shop-page {
+  background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover; }
+  #butcher-shop-page .article-with-opacity {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    background-color: white; }
+  #butcher-shop-page .emphasis {
+    font-style: italic;
+    font-weight: bold;
+    font-size: 22px;
+    font-family: Greek; }
+
+.navbar-default {
+  border-left: none;
+  border-top: 1px solid white;
+  border-right: none;
+  border-bottom: 1px solid white; }
+
+#slide-nav {
+  border-left: none;
+  border-top: 1px solid white;
+  border-right: none;
+  border-bottom: 1px solid white;
+  border-radius: 0; }
 
 .social-icons li {
   display: inline-block; }
@@ -176,11 +210,6 @@ body {
 
 ul {
   padding: 0; }
-
-.article-with-opacity {
-  border-radius: 10px;
-  margin-bottom: 20px;
-  background-color: rgba(255, 255, 255, 0.9); }
 
 p {
   padding: 10px;
@@ -230,7 +259,30 @@ address {
   margin-right: auto;
   margin-left: auto; }
 
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
 @media only screen and (max-width: 479px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 25px; }
+    #butcher-shop-page .article-with-opacity {
+      border-radius: 10px;
+      margin-bottom: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white; }
+    #butcher-shop-page .emphasis {
+      font-style: italic;
+      font-weight: bold;
+      font-size: 18px;
+      font-family: Greek; }
+
   .logo {
     width: 100px; }
 
@@ -254,7 +306,31 @@ address {
   .footer-rights {
     font-size: 10px;
     text-align: center; } }
+@media only screen and (min-width: 410px) and (max-width: 478px) {
+  .logo-absolute {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 999; } }
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
 @media only screen and (min-width: 480px) and (max-width: 719px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 25px; }
+    #butcher-shop-page .article-with-opacity {
+      border-radius: 10px;
+      margin-bottom: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white; }
+
   .logo {
     width: 120px; }
 
@@ -279,6 +355,9 @@ address {
 
   .navbar-nav {
     background-color: #10230f; } }
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
 @media only screen and (min-width: 720px) and (max-width: 767px) {
   .top-icons-nav {
     padding: 25px 0 8px 15px; }
@@ -290,8 +369,48 @@ address {
     position: absolute;
     top: 10px;
     right: 40px;
-    z-index: 999; } }
+    z-index: 999; }
+
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 25px; }
+    #butcher-shop-page .article-with-opacity {
+      border-radius: 10px;
+      margin-top: 400px;
+      margin-bottom: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white; }
+
+  .footer {
+    bottom: 0;
+    position: absolute;
+    width: 100%; } }
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 25px; }
+    #butcher-shop-page .article-with-opacity {
+      border-radius: 10px;
+      margin-top: 400px;
+      margin-bottom: 20px;
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white; }
+
   #slide-nav .navbar-toggle {
     margin-right: 10px; }
 
@@ -323,7 +442,26 @@ address {
 
   .navbar-nav {
     background-color: #10230f; } }
-@media only screen and (min-width: 1024px) and (max-width: 1199px) {
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
+@media only screen and (width: 1024px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 25px; }
+
+  .iPad-portrait-left {
+    margin-left: 72%; }
+
+  .iPad-portrait-left {
+    width: 29.6666%; }
+
   #slide-nav .navbar-toggle {
     margin-right: 10px; }
 
@@ -357,7 +495,74 @@ address {
 
   .navbar-nav {
     background-color: #10230f; } }
+@media only screen and (min-width: 1025px) and (max-width: 1199px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat center center fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 27px; }
+    #butcher-shop-page .iPad-portrait-left {
+      margin-left: 72%; }
+    #butcher-shop-page .iPad-portrait-left {
+      width: 29.6666%; }
+    #butcher-shop-page .emphasis {
+      font-style: italic;
+      font-weight: bold;
+      font-size: 18px;
+      font-family: Greek; }
+    #butcher-shop-page .phone {
+      color: black; }
+
+  #slide-nav .navbar-header {
+    margin: 0 auto;
+    padding: 0 0px; }
+
+  .top-icons-nav {
+    padding: 5px 0 8px 0px; }
+
+  .navbar-default .navbar-nav > li > a {
+    color: white;
+    font-size: 12px; }
+
+  .navbar-brand {
+    font-size: 16px; }
+
+  .logo {
+    width: 110px; }
+
+  .logo-absolute {
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    z-index: 999; } }
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
 @media only screen and (min-width: 1200px) {
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 27px; }
+    #butcher-shop-page .iPad-portrait-left {
+      margin-left: 72%; }
+    #butcher-shop-page .iPad-portrait-left {
+      width: 29.6666%; }
+
+  #history .article-with-opacity {
+    height: 460px; }
+  #history .image-figure {
+    margin-top: 0;
+    height: 460px; }
+
   .top-icons-nav {
     padding: 35px 0 8px 0px; }
 
@@ -376,14 +581,8 @@ address {
   .fa-size {
     font-size: 25px !important; }
 
-  .image-figure {
-    margin-top: 0px; }
-
   .footer {
-    height: 60px; }
-
-  .article-with-opacity {
-    height: 485px; }
+    height: 65px; }
 
   .footer-rights {
     font-size: 10px;
@@ -399,17 +598,36 @@ address {
     background-color: rgba(255, 255, 255, 0.9); }
 
   .navbar {
-    border-radius: 0; }
+    border-radius: 0; } }
+@font-face {
+  font-family: 'Greek';
+  src: url(../../fonts/GFSSolomos.otf); }
+@media only screen and (min-width: 1200px) and (max-height: 1023px) {
+  footer {
+    display: block; }
 
-  .navbar-default {
-    border: none; } }
-@media only screen and (min-width: 1200px) and (min-height: 800px) {
-  .footer {
-    bottom: 0;
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; } }
+@media only screen and (min-width: 1280px) and (min-height: 1024px) {
+  footer {
+    display: block;
     position: absolute;
+    bottom: 0;
     width: 100%; }
 
-  footer {
-    display: block; } }
+  #butcher-shop-page {
+    background: url("../../images/butcher-shop/Farma.2.jpg") no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover; }
+    #butcher-shop-page .phone {
+      color: white; }
+    #butcher-shop-page h1 {
+      font-size: 27px; } }
 
 /*# sourceMappingURL=non-main-pages.css.map */
